test/good/simple_not.mpp
var b:bool;

begin

read b;
print b;

if b then print false
     else print true;

end
