test/bad/type_missmatch_06.mpp
var a:bool;
var b:bool;

print a + b;
